--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
